Sun Jan 31 21:46:52 1999  Alexander Bergolth  <leo@leo.wu-wien.ac.at>

	* htlib/Connection.cc: Include sys/time.h needed by select.

Sun Jan 31 20:50:38 1999  Hans-Peter Nilsson  <hp@axis.se>

	* htdig/Retriever.cc (Initial, GetRef, Need2Get, IsValidURL,
	got_href, got_redirect): Do not lowercase URLs.

	* htlib/HtURLCodec.h (class HtURLCodec): Fake a friend function.

Sat Jan 30 22:29:50 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* configure, configure.in: Add support for program name
	transformations.

	* */Makefile.in: Do it.

Sat Jan 30 21:16:50 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htmerge/docs.cc: Added translation of Dutch comment for us ignorant
	Americans. ;-)

	* installdir/rundig: As mentioned by Gilles, use sed with ls -t
	test. Add more comments for FAQs.

	* configure.in, configure: Add --disable-zlib to turn off compiling
	compression entirely. Add --with-cgi-bin-dir,
	--with-image-dir and --with-search-dir flags to set CONFIG
	variables.

	* CONFIG.in: Use them.
	
Sat Jan 30 21:05:35 1999  Randy Winch <gumby@cafes.net>

	* htcommon/DocumentRef.h: If using compressed document databases,
	declare compress and decompress functions and the current state of
	the head (excerpt).

	* htcommon/DocumentRef.cc: Change document compression to only
	compress the DocHead field and only decompress when necessary.

Sat Jan 30 03:49:21 1999  Hans-Peter Nilsson  <hp@axis.se>

	* htcommon/DocumentRef.h: Add #ifdef around declaration of
	c_buffer.

	* htcommon/DocumentRef.cc: Remove spurious extra "static" from
	c_buffer definition.  Add #ifdef HAVE_LIBZ around it.

Fri Jan 29 13:30:11 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/htsearch.cc: Construct the StringMatch used for finding
	excerpts in two pieces--user input and post-fuzzy matching. Fixes
	problems with matching searches with punctuation.

	* htlib/StringMatch.cc(IgnoreCase): Fix small memory leak pointed
	out by Gilles.
